WorkShop_2.2_Security/security-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: security
  labels:
    name: security
    owner: Praparn_L
    version: "1.0"
    module: NameSpace
    environment: development
