WorkShop_2.2_Security/security-pod.yml
apiVersion: "v1"
kind: Pod
metadata:
  name: webtest
  namespace: security
  labels:
    name: web
    owner: Praparn_L
    version: "1.0"
    module: WebServer
    environment: development
spec:
  containers:
    - name: webtest
      image: labdocker/cluster:webservicelite_v1
      ports:
        - containerPort: 5000
          protocol: TCP
      volumeMounts:
      - mountPath: /temp
        name: homevol
  volumes:
    - name: homevol
      hostPath:
        path: /home/ubuntu
