WorkShop_2.2_Security/backend-set.yml
apiVersion: v1
kind: Namespace
metadata:
  name: stars
  labels:
    role: stars 
---
apiVersion: v1
kind: Service
metadata:
  name: backend 
  namespace: stars
spec:
  ports:
  - port: 6379
    targetPort: 6379 
  selector:
    role: backend
