WorkShop_2.2_Security/management-ui-set.yml
apiVersion: v1
kind: Namespace
metadata:
  name: management-ui 
  labels:
    role: management-ui 
---
apiVersion: v1
kind: Service
metadata:
  name: management-ui 
  namespace: management-ui 
spec:
  type: NodePort
  ports:
  - port: 80 
    targetPort: 9001
    nodePort: 32500
  selector:
    role: management-ui
