WorkShop_2.2_Security/security-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: webtest
  namespace: security
  labels:
    name: webtest
    owner: Praparn_L
    version: "1.0"
    module: WebServer
    environment: development
spec:
  selector:
    name: webtest
    owner: Praparn_L
    version: "1.0"
    module: WebServer
    environment: development

  type: NodePort
  ports:
   - port: 5000
     name: http
     targetPort: 5000
     protocol: TCP
     nodePort: 32500
