WorkShop_2.2_Security/policy-allow-frontend.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: client
  name: client-policy-egress
spec:
  podSelector:
    matchLabels:
      role: client
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              role: stars
      ports:
        - protocol: TCP
          port: 80
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: stars
  name: frontend-policy-ingress
spec:
  podSelector:
    matchLabels:
      role: frontend
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              role: client
      ports:
        - protocol: TCP
          port: 80
