WorkShop_2.2_Security/policy-deny-client.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: client
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
